--- a/http-server/project.html
+++ b/http-server/project.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>My Application</title>
+    <title>My Projects</title>
 </head>
 
 <body>
-    <h1>My Application Home</h1>
-    <a href="./registration">registration</a>
+    <h1>Projects</h1>
+    <h3>Project List</h3>
+    <a href="/registration">Registration page project</a>
 </body>
 
 </html>
