--- a/http-server/project.html
+++ b/http-server/project.html
@@ -10,6 +10,7 @@
     <h1>Projects</h1>
     <h3>Project List</h3>
     <a href="/registration">Registration page project</a>
+    <a href="/">&lt;- Back to home</a>
 </body>
 
 </html>
